add injection mgr
